force-app/main/default/objects/Quote__c/fields/Total_NET_General__c.field-meta.xml
<CustomField>
    <fullName>Total_NET_General__c</fullName>
    <formula>UPS_NET_General__c +  Building_System_NET_General__c +  Video_NET_General__c + HousePowerGeneration_NET_General__c + Transforming_NET_General__c + Labor_NET_General__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>自動計算全体NET（ゼネコン）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>