force-app/main/default/objects/Quote__c/fields/Total_NET_LastAcc__c.field-meta.xml
<CustomField>
    <fullName>Total_NET_LastAcc__c</fullName>
    <formula>UPS_NET_LastAcc__c + Building_System_NET_LastAcc__c + Video_NET_LastAcc__c + HousePowerGeneration_NET_LastAcc__c + Transforming_NET_LastAcc__c + Labor_NET_LastAcc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>自動計算全体NET（最終顧客）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>