force-app/main/default/objects/Quote__c/fields/Total_NET_Sub__c.field-meta.xml
<CustomField>
    <fullName>Total_NET_Sub__c</fullName>
    <formula>UPS_NET_Sub__c +  Building_System_NET_Sub__c +  Video_NET_Sub__c +  HousePowerGeneration_NET_Sub__c  +  Transforming_NET_Sub__c +  Labor_NET_Sub__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>自動計算全体NET（サブコン）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>