force-app/main/default/objects/Quote__c/fields/Total_NETRate_Sub__c.field-meta.xml
<CustomField>
    <fullName>Total_NETRate_Sub__c</fullName>
    <label>全体NET率（サブコン）</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>