force-app/main/default/objects/Quote__c/fields/Transforming_NET_Sub__c.field-meta.xml
<CustomField>
    <fullName>Transforming_NET_Sub__c</fullName>
    <label>受変電NET（サブコン）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>