force-app/main/default/objects/Quote__c/fields/Transforming_NETRate_Sub__c.field-meta.xml
<CustomField>
    <fullName>Transforming_NETRate_Sub__c</fullName>
    <label>受変電NET率（サブコン）</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>