force-app/main/default/objects/Quote__c/fields/Transforming_WC_currency__c.field-meta.xml
<CustomField>
    <fullName>Transforming_WC_currency__c</fullName>
    <defaultValue>0</defaultValue>
    <label>受変電WC</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>