force-app/main/default/objects/Quote__c/fields/UPS_NET_General__c.field-meta.xml
<CustomField>
    <fullName>UPS_NET_General__c</fullName>
    <label>UPSNET（ゼネコン）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>