force-app/main/default/objects/Quote__c/fields/UPS_NETRate_Sub__c.field-meta.xml
<CustomField>
    <fullName>UPS_NETRate_Sub__c</fullName>
    <label>UPSNET率（サブコン）</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>