force-app/main/default/objects/Quote__c/fields/Video_EP__c.field-meta.xml
<CustomField>
    <fullName>Video_EP__c</fullName>
    <label>映像EP</label>
    <summarizedField>Device__c.ClientAnswerAmountTotal__c</summarizedField>
    <summaryFilterItems>
        <field>Device__c.NETCalculateCategory__c</field>
        <operation>equals</operation>
        <value>映像</value>
    </summaryFilterItems>
    <summaryForeignKey>Device__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>