force-app/main/default/objects/Quote__c/fields/Video_NET_General__c.field-meta.xml
<CustomField>
    <fullName>Video_NET_General__c</fullName>
    <label>映像NET（ゼネコン）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>