force-app/main/default/objects/Quote__c/fields/Video_NETRate_General__c.field-meta.xml
<CustomField>
    <fullName>Video_NETRate_General__c</fullName>
    <label>映像NET率（ゼネコン）</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>