force-app/main/default/objects/Quote__c/fields/WcSum__c.field-meta.xml
<CustomField>
    <fullName>WcSum__c</fullName>
    <label>WC金額合計</label>
    <summarizedField>Device__c.WcSumFormula__c</summarizedField>
    <summaryForeignKey>Device__c.Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>