force-app/main/default/objects/Quote__c/fields/WcSum_currency__c.field-meta.xml
<CustomField>
    <fullName>WcSum_currency__c</fullName>
    <formula>IF ( ISBLANK(Transforming_WC_currency__c) , 0, Transforming_WC_currency__c)
+ IF ( ISBLANK(UPS_WC_currency__c ) , 0, UPS_WC_currency__c )
+ IF ( ISBLANK(HousePowerGeneration_WC_currency__c ) , 0, HousePowerGeneration_WC_currency__c )
+ IF ( ISBLANK(Building_System_WC_currency__c ) , 0, Building_System_WC_currency__c )
+ IF ( ISBLANK(Video_WC_currency__c ) , 0, Video_WC_currency__c )
+ IF ( ISBLANK(Labor_WC_currency__c) , 0, Labor_WC_currency__c)</formula>
    <label>WC金額合計</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>