force-app/main/default/objects/Quote__c/recordTypes/OfficialDemand.recordType-meta.xml
<RecordType>
    <fullName>OfficialDemand</fullName>
    <active>true</active>
    <label>官需</label>
</RecordType>