force-app/main/default/objects/Quote__c/recordTypes/WaterEnvironment.recordType-meta.xml
<RecordType>
    <fullName>WaterEnvironment</fullName>
    <active>true</active>
    <label>水環境</label>
</RecordType>