force-app/main/default/objects/Quote__c/validationRules/NumericalValueCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>NumericalValueCheck</fullName>
    <active>true</active>
    <description>入力された値が全角、半角問わず数値か否かをチェックする。</description>
    <errorConditionFormula>AND(
NOT(ISBLANK( GeneralAdministrativeExpenses__c ))
, NOT( REGEX( GeneralAdministrativeExpenses__c , &quot;[0-9０-９]*&quot; ) )
)</errorConditionFormula>
    <errorMessage>全角または半角の数字で入力してください。</errorMessage>
</ValidationRule>