force-app/main/default/objects/Quote__c/validationRules/RecordTypeCheck.validationRule-meta.xml
<ValidationRule>
    <fullName>RecordTypeCheck</fullName>
    <active>true</active>
    <errorConditionFormula>OR( AND(TEXT(Opportunity__r.BU__c) = &quot;施設&quot;, RecordType.Name != &quot;施設&quot; ),
AND(TEXT(Opportunity__r.BU__c) = &quot;水環境&quot;, RecordType.Name = &quot;施設&quot; ),
AND(TEXT(Opportunity__r.BU__c) = &quot;官需&quot;, RecordType.Name = &quot;施設&quot; )
)</errorConditionFormula>
    <errorMessage>案件のBUと見積のレコードタイプが異なっています。
正しいレコードタイプでデータを作成し直して下さい。</errorMessage>
</ValidationRule>