force-app/main/default/objects/Quote__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Account__c</columns>
    <columns>QuotePriceSum__c</columns>
    <columns>GeneralAdministrativeExpenses__c</columns>
    <columns>PowerFrequency__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>