force-app/main/default/objects/Quote__c/listViews/BUmitsumori.listView-meta.xml
<ListView>
    <fullName>BUmitsumori</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Account__c</columns>
    <columns>GeneralAdministrativeExpenses__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>PickDivision__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Quote__c.Facility</value>
    </filters>
    <label>施設BUの見積</label>
</ListView>